--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 *.pdf
 *.ps
+*.eps
 
 # Created by https://www.toptal.com/developers/gitignore/api/latex
 # Edit at https://www.toptal.com/developers/gitignore?templates=latex
